--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="center"
+    <div class="center">
     <h1>Actividad 2</h1>
     <h2>Campista: Daniela Guacalés</h2>
     <a href="https://docs.google.com/document/d/1zJGERo1CxnUMobv6GOpJ4YjkmwVOeuQ8/edit?usp=sharing&ouid=114030896607151154709&rtpof=true&sd=true" target="_blank">Link de acceso a la solución de la página 1</a>
