Agregamos un salto de línea entre los dos links de acceso

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="center"
     <h1>Actividad 2</h1>
     <h2>Campista: Daniela Guacalés</h2>
-    <a href="https://docs.google.com/document/d/1zJGERo1CxnUMobv6GOpJ4YjkmwVOeuQ8/edit?usp=sharing&ouid=114030896607151154709&rtpof=true&sd=true" target="_blank">Link de acceso a la solución de la página 1</a>
+    <a href="https://docs.google.com/document/d/1zJGERo1CxnUMobv6GOpJ4YjkmwVOeuQ8/edit?usp=sharing&ouid=114030896607151154709&rtpof=true&sd=true" target="_blank">Link de acceso a la solución de la página 1</a> <br>
     <a href="https://docs.google.com/document/d/1EPBUfbhApjtvd0esJzCKjKxlqqahjFCb/edit?usp=sharing&ouid=114030896607151154709&rtpof=true&sd=true" target="_blank">Link de acceso a la solución de la página 2</a>
     </div>
 </body>
